--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,4 +1,24 @@
+/*
+*    Copyright (C) 2015 Haruki Hasegawa
+*
+*    Licensed under the Apache License, Version 2.0 (the "License");
+*    you may not use this file except in compliance with the License.
+*    You may obtain a copy of the License at
+*
+*        http://www.apache.org/licenses/LICENSE-2.0
+*
+*    Unless required by applicable law or agreed to in writing, software
+*    distributed under the License is distributed on an "AS IS" BASIS,
+*    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+*    See the License for the specific language governing permissions and
+*    limitations under the License.
+*/
+
 apply plugin: 'com.android.application'
+
+// Common configurations
+apply from: '../common/android-set-common-properties.gradle'
+apply from: '../common/android-signing-utils.gradle'
 
 android {
     compileSdkVersion 21
@@ -11,12 +31,23 @@ android {
         versionCode 1
         versionName "0.5"
     }
+
+    signingConfigs {
+        release
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+// load signing config from external properties file
+if (loadSigningConfigFromPropertiesFile(
+    project, android.signingConfigs.release, '../signing/example-signing.properties')) {
+        android.buildTypes.release.signingConfig android.signingConfigs.release
 }
 
 dependencies {
