--- a/example/build.gradle
+++ b/example/build.gradle
@@ -21,13 +21,13 @@ apply from: '../common/android-set-common-properties.gradle'
 apply from: '../common/android-signing-utils.gradle'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.h6ah4i.android.example.verticalseekbar"
         minSdkVersion 9
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "0.5"
     }
@@ -54,5 +54,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(":library")
 
-    compile 'com.android.support:appcompat-v7:22.2.+'
+    compile 'com.android.support:appcompat-v7:23.1.1'
 }
