Fix layout issue in RTL mode and better padding handling (issue #6)

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -39,6 +39,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        demo {
+        }
+        development {
+        }
+    }
 }
 
 // load signing config from external properties file
