--- a/example/build.gradle
+++ b/example/build.gradle
@@ -49,5 +49,5 @@ if (loadSigningConfigFromPropertiesFile(
 
 dependencies {
     implementation project(":library")
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
