Migrate to AGP v7.4.1

--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,36 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-rc03'
+        classpath 'com.android.tools.build:gradle:7.4.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+plugins {
+    id("io.github.gradle-nexus.publish-plugin") version "1.3.0"
+}
+
+def dataProps = new Properties()
+dataProps.load(file('./library/library-data.properties').newDataInputStream())
+
+group = 'com.h6ah4i.android.widget.verticalseekbar'
+version = dataProps.VERSION_NAME
+
+
 allprojects {
     repositories {
         jcenter()
         google()
+    }
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            username = "$mavenCentralUsername"
+            password = "$mavenCentralPassword"
+        }
     }
 }
