--- a/common/android-maven-publish.gradle
+++ b/common/android-maven-publish.gradle
@@ -14,100 +14,79 @@
  *    limitations under the License.
  */
 
-apply plugin: 'maven'
+// [Usage]]
+// - publish to build directory
+//   ./gradlew library:publishReleasePublicationToBuildDir
+// - publish to sonatype maven repository
+//   ./gradlew library:publishReleasePublicationToSonatypeRepository
+// - publish to local maven repository
+//   ./gradlew library:publishToMavenLocal
+
+apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 // Declare these properties in project's extension
 // - ext.mavenPublishDestDir = [path to destination directory]
 // - ext.mavenPublishDataFile = [path to data properties file]
-// - ext.mavenPublishSigningSetting = [path to signing info properties file] (optional)
 
-def repoDir = project.mavenPublishDestDir
 def dataProps = new Properties()
 dataProps.load(project.file(project.mavenPublishDataFile).newDataInputStream())
+def libraryVersionName = dataProps.VERSION_NAME
 
-task cleanDocsOutDir(type: Delete) {
-    delete project.docsDir
-}
-
-task androidJavadocs(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    excludes += '**/BuildConfig.java'
-    excludes += '**/R.java'
-    options.encoding "utf-8"
-}
-
-task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
-    classifier = 'javadoc'
-    from androidJavadocs.destinationDir
-}
-
-task androidSourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.srcDirs
+android {
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 afterEvaluate {
-    androidJavadocs.classpath += project.android.libraryVariants.toList().first().javaCompile.classpath
-}
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
 
-signing {
-    // load 'keyId', 'password' and 'secretKeyRingFile'
-    def propsFile = project.file(project.mavenPublishSigningSetting)
+                groupId = 'com.h6ah4i.android.widget.verticalseekbar'
+                artifactId = 'verticalseekbar'
+                version = libraryVersionName
 
-    if (propsFile.exists()) {
-        def props = new Properties()
-        props.load(propsFile.newDataInputStream())
-
-        if (props.keyId != null &&
-            props.password != null &&
-            props.secretKeyRingFile != null) {
-            project.ext.keyId = props.keyId
-            project.ext.password  = props.password
-            project.ext.secretKeyRingFile = props.secretKeyRingFile
-        }
-    }
-
-    required { gradle.taskGraph.hasTask("uploadArchives") }
-    sign configurations.archives
-}
-
-uploadArchives {
-    repositories.mavenDeployer {
-        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-        repository(url: "file://${repoDir}")
-
-        pom.groupId = dataProps.POM_GROUP_ID
-        pom.artifactId = dataProps.POM_ARTIFACT_ID
-        pom.version = dataProps.VERSION_NAME
-        pom.project {
-            licenses {
-                license {
-                    name dataProps.POM_APACHE_V2_LICENCE_NAME
-                    url dataProps.POM_APACHE_V2_LICENCE_URL
-                    distribution dataProps.POM_APACHE_V2_LICENCE_DIST
-                }
-            }
-            scm {
-                url dataProps.POM_SCM_URL
-                connection dataProps.POM_SCM_CONNECTION
-                developerConnection dataProps.POM_SCM_DEVELOPER_CONNECTION
-            }
-            developers {
-                developer {
-                    id dataProps.POM_DEVELOPER_ID
-                    name dataProps.POM_DEVELOPER_NAME
+                pom {
+                    name = 'VerticalSeekBar'
+                    description = 'Vertical orientation SeekBar widget for Android'
+                    url = 'https://github.com/h6ah4i/android-verticalseekbar'
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id = 'h6ah4i'
+                            name = 'Haruki Hasegawa'
+                        }
+                    }
+                    scm {
+                        connection = 'scm:git:https://github.com/h6ah4i/android-verticalseekbar.git'
+                        developerConnection = 'scm:git:https://github.com/h6ah4i/android-verticalseekbar.git'
+                        url = 'https://github.com/h6ah4i/android-verticalseekbar'
+                    }
                 }
             }
         }
-    }
-}
 
-artifacts {
-    archives androidSourcesJar
-    if (System.getenv("JITPACK") != "true") {
-        archives androidJavadocsJar
+        repositories {
+            maven {
+                name = "BuildDir"
+                url = project.mavenPublishDestDir
+            }
+        }
+    }
+
+    signing {
+        useGpgCmd()
+        sign publishing.publications.release
     }
 }
